# yt-d

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  engine.rs  history.rs  lib.rs  main.rs  models.rs  settings.rs  state.rs
src/components/: DownloadItem.tsx  EngineSetupScreen.tsx  HistoryList.tsx  Icons.tsx  SettingsPanel.tsx  UrlBar.tsx  VideoPreviewCard.tsx
src/lib/: ipc.ts  types.ts
src/styles/: app.css  tokens.css
