[package]
name = "grabit"
version = "0.1.0"
description = "GrabIt — download videos from YouTube, X, Instagram, Facebook and 1800+ sites"
authors = ["wyasyn"]
edition = "2021"

[lib]
name = "grabit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
